Added localstorage usage for multiple users
Added edit and delete option to the added users.

--- a/style.css
+++ b/style.css
@@ -75,3 +75,10 @@
     padding: 5px;
     margin: 5px;
   }
+
+  .sub-btn{
+    padding:5px;
+    background:rgb(44, 43, 43);
+    color:white;
+    margin-left:10px;
+  }
